# sync-clipboard

./: .gitignore  LICENSE  README.md  cli.spec  flake.nix  justfile  main.py  pyproject.toml  sync-clipboard-gui.spec  sync-clipboard.py  sync-clipboard.spec
.github/workflows/: auto-tag.yml  release-build.yml
docs/: README-zhCN.md
docs/zh/: ClipboardMonitor.md
scripts/: release.py  test_all.py
src/: __init__.py  sync-clipboard.py  sync_clipboard.py  sync_clipboard_cli.py  sync_clipboard_gui.py
src/cli/: __init__.py  main.py
src/client/: __init__.py  sync_client.py
src/compat/: __init__.py  clipboard_sync.py
src/core/: __init__.py  clipboard.py  config.py  exceptions.py  logging_utils.py  protocol.py  version.py
src/server/: __init__.py  sync_server.py
tests/: test_anti_loop_properties.py  test_integration.py
