[project]
name = "sync-clipboard"
version = "0.1.0"
description = "A extremely simple cross-platform clipboard synchronization tool using WebSockets."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets>=10.0",
    "click>=8.0",
    "pyperclip>=1.8",
    "customtkinter>=5.2.2",
    "pystray>=0.19.5",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]

[project.scripts]
sync-clipboard = "src.sync_clipboard:main"
sync-clipboard-gui = "src.sync_clipboard_gui:main"
