[project]
name = "sync-clipboard"
version = "0.2.1"
description = "A extremely simple cross-platform clipboard synchronization tool using WebSockets."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets>=10.0",
    "click>=8.0",
    "pyperclip>=1.8",
    "customtkinter>=5.2.2",
    "pystray>=0.19.5",
    "platformdirs>=4.5.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { }   # 自动发现根目录下的包

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "hypothesis>=6.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.15.0",
]

[project.scripts]
# 左边 = 用户敲的命令；右边 = 包. 模块: 函数 / 对象
sync-clipboard = "src.sync_clipboard_cli:main"      # CLI
sync-clipboard-gui = "src.sync_clipboard_gui:main"  # GUI

[tool.ruff]
preview = true
fix-only = true
show-fixes = true
output-format = "grouped"
line-length = 100
src = [".", "inputflow", "tests"]

[tool.ruff.format]
preview = true
docstring-code-format = true
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["E4", "E7", "E9", "F", "I"]
